# taxi_hal

./: Readme.md  setup.cfg
src/taxi_hal/: __init__.py  __main__.py  i2c.py  pca9555a.py  smc.py  taxi_fanout.py  udaq.py
src/taxi_hal/commands/: __init__.py  udaq_prog.py
src/taxi_hal/hal/: __init__.py  i2c.py  pca9555a.py  smc.py  taxi_fanout.py  udaq.py
