[metadata]
name = taxi_hal
version = 0.0.3
author = Martin Pittermann
author_email = martin.pittermann@student.kit.edu
description = TAXI board hardware interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martin2250/taxi_hal
project_urls =
    Bug Tracker = https://github.com/martin2250/taxi_hal/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    taxi_hal = taxi_hal.__main__:main
